--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.full-screen-dialog .MuiDialog-paper {
+    margin: 0;
+    width: calc(100% - 300px); /* Adjust this value as needed */
+    max-width: none;
+    height: 100%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+  
